# procurement-discovery-copilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/agents/: clarification_agent.py  description_agent.py  orchestrator.py  report_agent.py  search_agent.py
src/config/: settings.py
src/models/: state.py
src/tools/: __init__.py  search_tools.py
src/utils/: llm_factory.py  logging.py  output_formatter.py
src/workflow/: procurement_workflow.py
